Added tiny entity

--- a/WeatherProject/Weather.Entities/Weather.Entities.csproj
+++ b/WeatherProject/Weather.Entities/Weather.Entities.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{32504CED-E22D-4689-8DC7-B117EEFEC3CD}</ProjectGuid>
+    <ProjectGuid>{36CCBD51-53CA-4DE2-B661-4F8667BEB0DA}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Weather.Domain</RootNamespace>
-    <AssemblyName>Weather.Domain</AssemblyName>
+    <RootNamespace>Weather.Entities</RootNamespace>
+    <AssemblyName>Weather.Entities</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,6 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -40,14 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Weather.Entities\Weather.Entities.csproj">
-      <Project>{36ccbd51-53ca-4de2-b661-4f8667beb0da}</Project>
-      <Name>Weather.Entities</Name>
-    </ProjectReference>
+    <Compile Include="WeatherReport.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
