Code-first up and running

--- a/WeatherProject/Weather.Entities/Weather.Entities.csproj
+++ b/WeatherProject/Weather.Entities/Weather.Entities.csproj
@@ -41,7 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Forecast.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TypeOfWeather.cs" />
     <Compile Include="WeatherReport.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
