--- a/WeatherProject/Weather.MVC/Web.config
+++ b/WeatherProject/Weather.MVC/Web.config
@@ -4,6 +4,12 @@
   http://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+  <configSections>
+  </configSections>
+  <connectionStrings>
+    <add name="Weather.MVC.Properties.Settings.Falken" connectionString="Data Source=172.16.214.1;Initial Catalog=1dv409_oklib08_Weather;Persist Security Info=True;User ID=appUser;Password=1Br@Lösen=rd?"
+      providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
