--- a/WeatherProject/Weather.MVC/Web.config
+++ b/WeatherProject/Weather.MVC/Web.config
@@ -7,8 +7,7 @@
   <configSections>
   </configSections>
   <connectionStrings>
-    <add name="Weather.MVC.Properties.Settings.Falken" connectionString="Data Source=172.16.214.1;Initial Catalog=1dv409_oklib08_Weather;Persist Security Info=True;User ID=appUser;Password=1Br@Lösen=rd?"
-      providerName="System.Data.SqlClient" />
+    <add name="Weather.MVC.Properties.Settings.Falken" connectionString="Data Source=172.16.214.1;Initial Catalog=1dv409_oklib08_Weather;Persist Security Info=True;User ID=appUser;Password=1Br@Lösen=rd?" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -24,7 +23,7 @@
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed" />
-        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Optimization" publicKeyToken="31bf3856ad364e35" />
