Added custom http error pages

--- a/WeatherProject/Weather.MVC/Weather.MVC.csproj
+++ b/WeatherProject/Weather.MVC/Weather.MVC.csproj
@@ -177,6 +177,9 @@
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\_references.js" />
+    <Content Include="Views\HttpError\400.html" />
+    <Content Include="Views\HttpError\404.html" />
+    <Content Include="Views\HttpError\500.html" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
