--- a/WeatherProject/Weather.MVC/Web.config
+++ b/WeatherProject/Weather.MVC/Web.config
@@ -53,4 +53,14 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+  <system.webServer>
+    <httpErrors errorMode="Custom" existingResponse="Replace">
+      <remove statusCode="500" subStatusCode="-1" />
+      <remove statusCode="404" subStatusCode="-1" />
+      <remove statusCode="400" subStatusCode="-1" />
+      <error statusCode="400" prefixLanguageFilePath="" path="Views\HttpError\400.html" responseMode="File" />
+      <error statusCode="404" prefixLanguageFilePath="" path="Views\HttpError\404.html" responseMode="File" />
+      <error statusCode="500" prefixLanguageFilePath="" path="Views\HttpError\500.html" responseMode="File" />
+    </httpErrors>
+  </system.webServer>
 </configuration>
