--- a/WeatherProject/Weather.MVC/Web.config
+++ b/WeatherProject/Weather.MVC/Web.config
@@ -54,7 +54,7 @@
     </compilers>
   </system.codedom>
   <system.webServer>
-    <httpErrors errorMode="Custom" existingResponse="Replace">
+    <httpErrors errorMode="DetailedLocalOnly" existingResponse="Replace">
       <remove statusCode="500" subStatusCode="-1" />
       <remove statusCode="404" subStatusCode="-1" />
       <remove statusCode="400" subStatusCode="-1" />
